--- a/less/index.less
+++ b/less/index.less
@@ -187,6 +187,18 @@ header {
 			border: 1px solid lightgrey;
 			padding: @main-padding;
 			width: 100%;
+		}		
+	}
+
+	@media (max-width: 500px){
+		flex-direction: column;
+
+		.intro {
+			width: 100%;
+		}
+
+		.skills {
+			width: 100%;
 		}
 	}
 }
